@@ -11,8 +11,8 @@ macro(EmbedResources)
   set(IS_PATH_NAME false)
   foreach(arg ${ARGN})
     if (${IS_PATH_NAME})
-      list(APPEND SCRIPT_ARGUMENTS "${CMAKE_CURRENT_SOURCE_DIR}/${arg}")
-      list(APPEND DEPENDENCIES "${CMAKE_CURRENT_SOURCE_DIR}/${arg}")
+      list(APPEND SCRIPT_ARGUMENTS "${arg}")
+      list(APPEND DEPENDENCIES "${arg}")
       set(IS_PATH_NAME false)
     else()
       list(APPEND SCRIPT_ARGUMENTS "${arg}")
